<resources>
    <string name="app_name">Diet Plan Discovery</string>
    <string name="food_image_header">Food image header</string>
    <string name="calories_text">Calories</string>
    <string name="carbs_text">Carbs</string>
    <string name="protein_text">Protein</string>
    <string name="fat_text">Fat</string>
    <string name="label_food_image">Food image</string>
    <string name="label_cal">cal</string>
    <string name="label_caloValue">246.0</string>
    <string name="label_foodName">Grilled chicken</string>
    <string name="label_mealImage">Meal image</string>
    <string name="label_foodSelectionCount">You\'ve selected X food items</string>
    <string name="label_backButton">Back button</string>
    <string name="label_chooseTargetBtn">Choose target</string>
    <string name="label_initialValue">0</string>
    <string name="label_eatenText">EATEN</string>
    <string name="label_caloStatus">cal left</string>
    <string name="label_carbsLimit">" / 100"</string>
    <string name="label_proteinLimit">" / 75"</string>
    <string name="label_fatLimit">" / 30"</string>
    <string name="label_calendar_icon">calendar icon</string>
    <string name="label_today">TODAY</string>
    <string name="label_breakfast_icon">breakfast icon</string>
    <string name="label_breakfast">Breakfast</string>
    <string name="label_selectMealBtn">Select meal</string>
    <string name="label_lunch">Lunch</string>
    <string name="label_lunch_icon">Lunch icon</string>
    <string name="label_DinnerSelectBtn">Select meal</string>
    <string name="label_dinner_icon">Dinner icon</string>
    <string name="label_dinner">Dinner</string>
    <string name="label_dinnerSelectionBtn">Select meal</string>
    <string name="label_cancelBtn">Cancel</string>
    <string name="label_chooseBtn">Choose</string>
    <string name="label_selectedCaloAmount">... calories</string>
    <string name="label_homepage_background">Homepage background</string>
    <string name="welcome_text">READY TO EXPLORE\nYOUR DIET</string>
    <string name="label_startBtn">Start Now</string>
    <string name="label_foodDesc">Pizza is a favorite food for many around the world. The addicting combination of delicious crust, sweet tomato sauce and salty mozzarella cheese is sure to please even the pickiest of eaters. However, it’s commonly labeled unhealthy, as it can be high in calories, sodium and carbs.</string>
    <string name="label_foodName_pizza">Pizza</string>
    <string name="label_calories">Calories</string>
    <string name="label_carbs">Carbs</string>
    <string name="label_carbsVal">0.0 g</string>
    <string name="label_protein">Protein</string>
    <string name="label_proteinVal">46.0 g</string>
    <string name="label_fat">Fat</string>
    <string name="label_fatVal">5.0 g</string>
    <string name="label_addFoodBtn">Add food</string>
    <string name="symbol_cooking">symbol cooking</string>
</resources>