<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_container_cardItem"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/grey"
    app:cardElevation="20dp"
    android:layout_margin="20dp"
    android:background="@drawable/section_bg"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/image_cardImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/chicken_pho"
            android:contentDescription="@string/label_food_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_cardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:lines="2"
            android:text="@string/label_foodName"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/image_cardImage"
            app:layout_constraintTop_toTopOf="@+id/image_cardImage" />

        <TextView
            android:id="@+id/text_cardNutritionVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_caloValue"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/text_cardTitle"
            app:layout_constraintTop_toBottomOf="@+id/text_cardTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_cal"
            android:layout_marginStart="6dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/text_cardNutritionVal"
            app:layout_constraintTop_toTopOf="@+id/text_cardNutritionVal" />

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/dish_icon_128"
            android:translationX="18dp"
            android:contentDescription="@string/symbol_cooking"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>