<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_container_caloriesPicker">

    <NumberPicker
        android:id="@+id/numberPicker_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_pickerCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/cancel_button"
        android:text="@string/label_cancelBtn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberPicker_calories"
        app:layout_constraintVertical_bias="0.636" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_pickerChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_bg"
        android:text="@string/label_chooseBtn"
        app:layout_constraintBottom_toBottomOf="@+id/button_pickerCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_pickerCancel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_currentSelectedCalo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_selectedCaloAmount"
        android:textSize="20sp"
        android:layout_margin="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/numberPicker_calories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toEndOf="@+id/numberPicker_calories"
        app:layout_constraintTop_toTopOf="@+id/numberPicker_calories"
        app:layout_constraintVertical_bias="0.503" />

</androidx.constraintlayout.widget.ConstraintLayout>